Solucionando error q terminaba aplicación al  ingresar mal dni

--- a/proyecto-final/proyecto-final.csproj
+++ b/proyecto-final/proyecto-final.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Iniciador.cs.cs" />
+    <Compile Include="Iniciador.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
